style.css
@charset "UTF-8";
/* css Document */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: arial, sans-serif;
}

header {
    width: 100%;
    height: 3rem;
}

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    padding: 6px;
}

.navbar a {
    text-decoration: none;
    color: rgb(63, 63, 63);
}

.navlink {
    display: flex;
    justify-content: space-between;
    width: 6rem;
    height: 35px;
    font-size: 12px;
    text-decoration: none;
    list-style-type: none;
    margin-right: 12px;
    align-items: center;
}

.navbtn {
    display: flex;
    background-color: lightcoral;
    height: 35px;
    align-items: center;
    justify-content: space-evenly;
}

.navbtn .apps {
    width: 35px;
    height: 35px;
    border: none;
    border-radius: 50px;
    background-color: transparent;
}
  
.navbtn .account {
    width: 35px;
    height: 35px;
    border: none;
    border-radius: 50px;
    background-color: transparent;
}

.navbtn img{
    height: 28px;
    width: 28px;
    border-radius: 50px;
}

.navlink a:hover {
   text-decoration: underline;
}
  
.apps:hover {
    background-color: aliceblue;
}

.account:hover {
    background-color: aliceblue;
}

img {
    width: 220px;
}

.focus {
    padding: 20px;
}

.logo {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 198px;
    min-height: 92px;
    max-height: 290px;
}

.searchsection {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

input {
    color: #dfe1e5;
    border-radius: 24px;
    border: solid;
    border-width: 1px;
    box-shadow: none;
    width: auto;
    max-width: 584px;
    min-width: 362px;
    height: 44px;
}

input:hover, input:focus {
    cursor:text;
    border:none;
    box-shadow: 0 1px 4px 1px #bebebeb7;
    outline: none;
}

textarea {
    max-width: 450px;
    min-width: 300px;
}

button {
    background-color: #F8F9FA;
    border: none;
    border-radius: 4px;
    height: 30px;
    margin-top: 20px;
    font-size: 11px;
    color: #202124;
    padding: 10px 10px;
    width: auto;
    margin-left: 5px;
}

.search-button {
    margin-left: 75px;
    
}

button:hover {
    box-shadow: 0 1px 4px 1px #bebebeb7;
    cursor: pointer;
}

footer {
    position: fixed;
    background-color: #F2F2F2;
    width: 100%;
    padding-left: 30px;
    bottom: 0px;
    text-decoration: none;
    font-size: 12px;
}

footer .footerA a {
    text-decoration: none;
    list-style-type: none;
    color: #6F6F6F;
    display: flex;

}

.footerA .apart {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    height: 2.5rem;
}

.footerA .apart a{
    padding: 5px;
    margin-right: 15px;
}

footer .footerA a:hover {
    text-decoration: underline;
}

.push {
    margin-left: auto;
}

